--- a/p5/genettic-algo/index.html
+++ b/p5/genettic-algo/index.html
@@ -9,6 +9,7 @@
     <script src="../addons/p5.dom.min.js"></script>
     <script src="../addons/p5.sound.min.js"></script>
     <script src="goal.js"></script>
+    <script src="obstacle.js"></script>
     <script src="brain.js"></script>
     <script src="dot.js"></script>
     <script src="population.js"></script>
